<resources>
    <string name="app_name">memeRUN</string>
    <string name="BackButton">Back</string>
    <string name="SavetoPhone">Save to Phone</string>
    <string name="ViewCollection">View Collection</string>
    <string name="Achievements">Achievements</string>
    <string name="RecentActivity">Diary</string>
    <string name="Start">Start</string>
    <string name="NextAchievement">Next Achievement</string>
    <string name="Requirement">Requirement</string>
    <string name="MemeUnlocked">Meme Unlocked:</string>
    <string name="Date">Date</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="stop">Stopped</string>
    <string name="cancel">cancel</string>
    <string name="No">No</string>
    <string name="Set">Set</string>
    <string name="Setsteps">Set steps</string>
    <string name="Cheat">Cheat</string>
    <string name="Activities">Activities</string>
    <string name="Difficulty">Difficulty</string>
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="Steps">Steps</string>
    <string name="Thisfeelslikeyou">This feels like you:</string>
    <string name="AchievementsUnlocked">"Achievements unlocked: "</string>
</resources>
