<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item

        android:id="@+id/difficuly"
        android:title="@string/Difficulty">

        <menu>
            <item
                android:id="@+id/easy"
                android:title="@string/Easy" />
            <item
                android:id="@+id/medium"
                android:title="@string/Medium" />
            <item
                android:id="@+id/hard"
                android:title="@string/Hard" />
        </menu>


    </item>

    <item

        android:id="@+id/activities"
        android:title="@string/Activities">

        <menu>
            <item
                android:id="@+id/startandstop"
                android:title="@string/Start" />
            <item
                android:id="@+id/recent_activity"
                android:title="@string/RecentActivity" />
            <item
                android:id="@+id/collection"
                android:title="@string/ViewCollection" />

        </menu>


    </item>

    <item
        android:id="@+id/cheats"
        android:title="@string/Cheat">

        <menu>
            <item
                android:id="@+id/Set"
                android:title="@string/Setsteps" />

        </menu>


    </item>

</menu>