<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


        <android.support.v7.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="290dp"
            android:layout_height="90dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="16dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_start">

                <Button
                    android:id="@+id/start_btn"
                    android:layout_width="261dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:shadowColor="@android:color/background_dark"
                    android:text="@string/Start"
                    android:verticalScrollbarPosition="left"
                    android:visibility="visible" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_start"
            android:layout_width="290dp"
            android:layout_height="90dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="16dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.692"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <Button
                    android:id="@+id/Recent_activity_btn"
                    android:layout_width="261dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:shadowColor="@android:color/background_dark"
                    android:text="@string/RecentActivity"
                    android:verticalScrollbarPosition="left"
                    android:visibility="visible" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="290dp"
            android:layout_height="90dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="16dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

                <Button
                    android:id="@+id/Achievements_btn"
                    android:layout_width="261dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:shadowColor="@android:color/background_dark"
                    android:text="@string/Achievements"
                    android:verticalScrollbarPosition="left"
                    android:visibility="visible" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardView"
            android:layout_width="290dp"
            android:layout_height="90dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="16dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diary_txt">

                <Button
                    android:id="@+id/View_collection_btn"
                    android:layout_width="261dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:shadowColor="@android:color/background_dark"
                    android:text="@string/ViewCollection"
                    android:verticalScrollbarPosition="left"
                    android:visibility="visible" />

        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/trollface"
            android:layout_width="67dp"
            android:layout_height="69dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="317dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4"
            app:layout_constraintVertical_bias="0.478"
            app:srcCompat="@mipmap/trollface_foregnd" />

        <TextView
            android:id="@+id/diary_txt"
            android:layout_width="296dp"
            android:layout_height="94dp"
            android:layout_marginStart="47dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="49dp"
            android:text="TextView"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>